objects/Evaluation_Form_Field_Value__c.object
<CustomObject>
    <description>Potential values for an Evaluation Field.</description>
    <fields>
        <fullName>Evaluation_Form_Field_Option__c</fullName>
        <label>Evaluation Form Field Option</label>
        <referenceTo>Evaluation_Form_Field_Option__c</referenceTo>
        <relationshipLabel>Evaluation Form Field Values</relationshipLabel>
        <relationshipName>Evaluation_Form_Field_Values</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Expression__c</fullName>
        <label>Expression</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Predicate__c</fullName>
        <label>Predicate</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Evaluation Form Field Value</label>
    <nameField>
        <displayFormat>efv1{000000}</displayFormat>
        <label>Evaluation Form Field Value Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Evaluation Form Field Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>